--- a/dependencies.html
+++ b/dependencies.html
@@ -145,7 +145,7 @@
                   <li id="publishDate">Last Published: 2017-03-25
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 0.1.0
                       </li>
                       
               
@@ -610,7 +610,7 @@
 <div class="section">
 <h3><a name="Dependency_Tree"></a>Dependency Tree</h3>
 <ul>
-<li>com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
+<li>com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0 <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Deployment Recorder Extension</th></tr>
@@ -975,14 +975,14 @@
 <p><b>Project Licenses: </b><a class="externalLink" href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License, Version 1.0</a></p></td></tr></table></div></li></ul></li></ul></div></div><a name="Licenses"></a>
 <div class="section">
 <h2><a name="Licenses"></a>Licenses</h2>
-<p><b>Eclipse Public License, Version 1.0: </b>Aether API, Aether Implementation, Aether SPI, Aether Utilities, org.eclipse.sisu.inject, org.eclipse.sisu.plexus</p>
 <p><b>Apache Public License 2.0: </b>Plexus Cipher: encryption/decryption Component, Plexus Security Dispatcher Component</p>
-<p><b>GNU LESSER GENERAL PUBLIC LICENSE: </b>BeanShell</p>
-<p><b>Apache License 2.0: </b>Deployment Recorder Extension</p>
-<p><b>MIT License: </b>SLF4J API Module</p>
-<p><b>Apache License, Version 2.0: </b>AssertJ fluent assertions, CDI APIs, Maven Plugin Tools Java 5 Annotations, Plexus :: Component Annotations, Plexus Common Utilities, TestNG</p>
-<p><b>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0: </b>JSR-250 Common Annotations for the JavaTM Platform</p>
 <p><b>Public Domain: </b>AOP alliance</p>
+<p><b>GNU LESSER GENERAL PUBLIC LICENSE: </b>BeanShell</p>
+<p><b>Apache License, Version 2.0: </b>AssertJ fluent assertions, CDI APIs, Maven Plugin Tools Java 5 Annotations, Plexus :: Component Annotations, Plexus Common Utilities, TestNG</p>
+<p><b>Eclipse Public License, Version 1.0: </b>Aether API, Aether Implementation, Aether SPI, Aether Utilities, org.eclipse.sisu.inject, org.eclipse.sisu.plexus</p>
+<p><b>Apache License 2.0: </b>Deployment Recorder Extension</p>
+<p><b>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0: </b>JSR-250 Common Annotations for the JavaTM Platform</p>
+<p><b>MIT License: </b>SLF4J API Module</p>
 <p><b>The Apache Software License, Version 2.0: </b>Guava: Google Core Libraries for Java, JCommander, Maven Aether Provider, Maven Artifact, Maven Core, Maven Model, Maven Model Builder, Maven Plugin API, Maven Repository Metadata Model, Maven Settings, Maven Settings Builder, Plexus Classworlds, Plexus Interpolation API, Sisu - Guice, Sisu - Inject (JSR330 bean support), Sisu - Inject (Plexus bean support), Sisu Guice - Core Library, javax.inject</p></div><a name="Dependency_File_Details"></a>
 <div class="section">
 <h2><a name="Dependency_File_Details"></a>Dependency File Details</h2>
