--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -145,7 +145,7 @@
                   <li id="publishDate">Last Published: 2017-03-25
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 0.1.0
                       </li>
                       
               
@@ -326,11 +326,11 @@
 <tr class="a">
 <td width="25%">3.0</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-artifact:jar:3.0:provided - omitted for conflict with 3.1.1)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-artifact:jar:3.0:provided - omitted for conflict with 3.1.1)<br /><br /></ol></td></tr>
 <tr class="b">
 <td width="25%">3.1.1</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-artifact:jar:3.1.1:provided<br /><br /></ol></td></tr></table></td></tr></table></div>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-artifact:jar:3.1.1:provided<br /><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4><a name="org.apache.maven:maven-model"></a>org.apache.maven:maven-model</h4>
 <table border="0" class="table table-striped">
@@ -341,11 +341,11 @@
 <tr class="b">
 <td width="25%">3.0</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-model:jar:3.0:provided - omitted for conflict with 3.1.1)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-model:jar:3.0:provided - omitted for conflict with 3.1.1)<br /><br /></ol></td></tr>
 <tr class="a">
 <td width="25%">3.1.1</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-model:jar:3.1.1:provided<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-model-builder:jar:3.1.1:provided<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;(org.apache.maven:maven-model:jar:3.1.1:provided - omitted for duplicate)<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-aether-provider:jar:3.1.1:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-model:jar:3.1.1:provided - omitted for duplicate)<br /><br /></ol></td></tr></table></td></tr></table></div>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-model:jar:3.1.1:provided<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-model-builder:jar:3.1.1:provided<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;(org.apache.maven:maven-model:jar:3.1.1:provided - omitted for duplicate)<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-aether-provider:jar:3.1.1:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-model:jar:3.1.1:provided - omitted for duplicate)<br /><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4><a name="org.codehaus.plexus:plexus-classworlds"></a>org.codehaus.plexus:plexus-classworlds</h4>
 <table border="0" class="table table-striped">
@@ -356,15 +356,15 @@
 <tr class="a">
 <td width="25%">2.2.3</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-inject-plexus:jar:1.4.2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-classworlds:jar:2.2.3:provided - omitted for conflict with 2.4)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-inject-plexus:jar:1.4.2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-classworlds:jar:2.2.3:provided - omitted for conflict with 2.4)<br /><br /></ol></td></tr>
 <tr class="b">
 <td width="25%">2.4</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.eclipse.sisu:org.eclipse.sisu.plexus:jar:0.0.0.M5:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-classworlds:jar:2.4:provided - omitted for conflict with 2.5.1)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.eclipse.sisu:org.eclipse.sisu.plexus:jar:0.0.0.M5:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-classworlds:jar:2.4:provided - omitted for conflict with 2.5.1)<br /><br /></ol></td></tr>
 <tr class="a">
 <td width="25%">2.5.1</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.codehaus.plexus:plexus-classworlds:jar:2.5.1:provided<br /><br /></ol></td></tr></table></td></tr></table></div>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.codehaus.plexus:plexus-classworlds:jar:2.5.1:provided<br /><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4><a name="org.eclipse.aether:aether-api"></a>org.eclipse.aether:aether-api</h4>
 <table border="0" class="table table-striped">
@@ -375,11 +375,11 @@
 <tr class="a">
 <td width="25%">0.9.0.M2</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-aether-provider:jar:3.1.1:provided<br />&#160;&#160;&#160;|&#160;&#160;+-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;org.eclipse.aether:aether-spi:jar:0.9.0.M2:provided<br />&#160;&#160;&#160;|&#160;&#160;&#160;&#160;&#160;\-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br />&#160;&#160;&#160;+-&#160;org.eclipse.aether:aether-impl:jar:0.9.0.M2:provided<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br />&#160;&#160;&#160;+-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for conflict with 1.0.0.v20140518)<br />&#160;&#160;&#160;\-&#160;org.eclipse.aether:aether-util:jar:0.9.0.M2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-aether-provider:jar:3.1.1:provided<br />&#160;&#160;&#160;|&#160;&#160;+-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;org.eclipse.aether:aether-spi:jar:0.9.0.M2:provided<br />&#160;&#160;&#160;|&#160;&#160;&#160;&#160;&#160;\-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br />&#160;&#160;&#160;+-&#160;org.eclipse.aether:aether-impl:jar:0.9.0.M2:provided<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br />&#160;&#160;&#160;+-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for conflict with 1.0.0.v20140518)<br />&#160;&#160;&#160;\-&#160;org.eclipse.aether:aether-util:jar:0.9.0.M2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.eclipse.aether:aether-api:jar:0.9.0.M2:provided - omitted for duplicate)<br /><br /></ol></td></tr>
 <tr class="b">
 <td width="25%">1.0.0.v20140518</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.eclipse.aether:aether-api:jar:1.0.0.v20140518:provided<br /><br /></ol></td></tr></table></td></tr></table></div>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.eclipse.aether:aether-api:jar:1.0.0.v20140518:provided<br /><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4><a name="org.sonatype.sisu:sisu-guice"></a>org.sonatype.sisu:sisu-guice</h4>
 <table border="0" class="table table-striped">
@@ -390,11 +390,11 @@
 <tr class="b">
 <td width="25%">2.1.7</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-inject-plexus:jar:1.4.2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-inject-bean:jar:1.4.2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-guice:jar:noaop:2.1.7:provided<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-plugin-api:jar:3.0:provided (version managed from 3.1.1)<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-inject-plexus:jar:1.4.2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-inject-bean:jar:1.4.2:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-guice:jar:noaop:2.1.7:provided<br /><br /></ol></td></tr>
 <tr class="a">
 <td width="25%">3.1.0</td>
 <td>
-<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.eclipse.sisu:org.eclipse.sisu.plexus:jar:0.0.0.M5:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-guice:jar:no_aop:3.1.0:provided<br /><br /></ol></td></tr></table></td></tr></table></div></div>
+<ol style="list-style-type: decimal">com.soebes.maven.extensions:deployment-recorder-extension:jar:0.1.0<br />\-&#160;org.apache.maven:maven-core:jar:3.1.1:provided<br />&#160;&#160;&#160;\-&#160;org.eclipse.sisu:org.eclipse.sisu.plexus:jar:0.0.0.M5:provided<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;org.sonatype.sisu:sisu-guice:jar:no_aop:3.1.0:provided<br /><br /></ol></td></tr></table></td></tr></table></div></div>
                   </div>
             </div>
           </div>
