--- a/findbugs.html
+++ b/findbugs.html
@@ -145,7 +145,7 @@
                   <li id="publishDate">Last Published: 2017-03-25
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 0.1.0
                       </li>
                       
               
