--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -145,7 +145,7 @@
                   <li id="publishDate">Last Published: 2017-03-25
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 0.1.0
                       </li>
                       
               
@@ -292,7 +292,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>38</td></tr>
+<td>39</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -780,6 +780,16 @@
 <th>Next Major</th>
 <th>Dependency status</th></tr>
 <tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>org.apache.maven.plugins</td>
+<td>maven-gpg-plugin</td>
+<td><b>1.6</b></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
+<tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.codehaus.mojo</td>
 <td>mrm-maven-plugin</td>
@@ -789,7 +799,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.sonatype.plugins</td>
 <td>sisu-maven-plugin</td>
@@ -799,7 +809,7 @@
 <td><b>1.2</b></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.tinyjee.dim</td>
 <td>doxia-include-macro</td>
@@ -809,7 +819,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="b">
+<tr class="a">
 <th>Status</th>
 <th>Group Id</th>
 <th>Artifact Id</th>
@@ -825,16 +835,16 @@
 <div class="section">
 <h3><a name="Plugin_com.soebes.maven.plugins:echo-maven-plugin"></a>Plugin com.soebes.maven.plugins:echo-maven-plugin</h3>
 <table border="0" class="table table-striped">
-<tr class="a">
+<tr class="b">
 <th width="80%">Status</th>
 <td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Group Id</th>
 <td>com.soebes.maven.plugins</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Artifact Id</th>
 <td>echo-maven-plugin</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Current Version</th>
 <td>0.3.0</td></tr></table></div>
 <div class="section">
@@ -1038,6 +1048,21 @@
 <tr class="b">
 <th width="80%">Current Version</th>
 <td>2.19.1</td></tr></table></div>
+<div class="section">
+<h3><a name="Plugin_org.apache.maven.plugins:maven-gpg-plugin"></a>Plugin org.apache.maven.plugins:maven-gpg-plugin</h3>
+<table border="0" class="table table-striped">
+<tr class="a">
+<th width="80%">Status</th>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
+<tr class="b">
+<th width="80%">Group Id</th>
+<td>org.apache.maven.plugins</td></tr>
+<tr class="a">
+<th width="80%">Artifact Id</th>
+<td>maven-gpg-plugin</td></tr>
+<tr class="b">
+<th width="80%">Current Version</th>
+<td>1.6</td></tr></table></div>
 <div class="section">
 <h3><a name="Plugin_org.apache.maven.plugins:maven-install-plugin"></a>Plugin org.apache.maven.plugins:maven-install-plugin</h3>
 <table border="0" class="table table-striped">
