--- a/pmd.html
+++ b/pmd.html
@@ -145,7 +145,7 @@
                   <li id="publishDate">Last Published: 2017-03-25
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 0.1.0
                       </li>
                       
               
@@ -301,7 +301,28 @@
 <td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtension.html#L73">73</a></td></tr>
 <tr class="a">
 <td>Unnecessary use of fully qualified name 'org.eclipse.aether.RepositoryEvent' due to existing import 'org.eclipse.aether.RepositoryEvent'</td>
-<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtension.html#L115">115</a></td></tr></table></div></div>
+<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtension.html#L115">115</a></td></tr></table></div>
+<div class="section">
+<h3><a name="comsoebesmavenextensionsDeploymentRecorderExtensionVersion.java"></a>com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.java</h3>
+<table border="0" class="table table-striped">
+<tr class="b">
+<th>Violation</th>
+<th>Line</th></tr>
+<tr class="a">
+<td>Unnecessary final modifier in final class</td>
+<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L16">16</a>&#x2013;<a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L18">18</a></td></tr>
+<tr class="b">
+<td>Unnecessary final modifier in final class</td>
+<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L20">20</a>&#x2013;<a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L22">22</a></td></tr>
+<tr class="a">
+<td>Unnecessary final modifier in final class</td>
+<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L24">24</a>&#x2013;<a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L26">26</a></td></tr>
+<tr class="b">
+<td>Unnecessary final modifier in final class</td>
+<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L28">28</a>&#x2013;<a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L30">30</a></td></tr>
+<tr class="a">
+<td>Unnecessary final modifier in final class</td>
+<td><a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L32">32</a>&#x2013;<a href="./xref/com/soebes/maven/extensions/DeploymentRecorderExtensionVersion.html#L34">34</a></td></tr></table></div></div>
                   </div>
             </div>
           </div>
