--- a/project-summary.html
+++ b/project-summary.html
@@ -145,7 +145,7 @@
                   <li id="publishDate">Last Published: 2017-03-25
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 0.1.0
                       </li>
                       
               
@@ -329,7 +329,7 @@
 <td>deployment-recorder-extension</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>0.1.0-SNAPSHOT</td></tr>
+<td>0.1.0</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>jar</td></tr>
